Cancel PurchaseOrder & Cancel Process implemented

--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -87,6 +87,10 @@
 		<value>Uygulama Ayarları</value>
 	</data>
 
+	<data name="CancelPurchaseOrder" xml:space="preserve">
+		<value>Siparişi İptal Et</value>
+	</data>
+
 	<data name="ContactUs" xml:space="preserve">
 		<value>Bize Ulaşın</value>
 	</data>
