--- a/Source/CP.i8n/EntityStrings.Resx
+++ b/Source/CP.i8n/EntityStrings.Resx
@@ -59,6 +59,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
 
+	<data name="AddAspNetUser" xml:space="preserve">
+		<value>Add AppUser</value>
+	</data>
+
 	<data name="AddCompany" xml:space="preserve">
 		<value>Add Company</value>
 	</data>
@@ -69,6 +73,10 @@
 
 	<data name="AddCustomer" xml:space="preserve">
 		<value>Add Customer</value>
+	</data>
+
+	<data name="AddNewAspNetUser" xml:space="preserve">
+		<value>Add New AppUser</value>
 	</data>
 
 	<data name="AddNewCompany" xml:space="preserve">
@@ -155,6 +163,10 @@
 		<value>Add Purchase Order</value>
 	</data>
 
+	<data name="AddRemoveAspNetUser" xml:space="preserve">
+		<value>Add Remove AppUser</value>
+	</data>
+
 	<data name="AddRemoveCompany" xml:space="preserve">
 		<value>Add/Remove Company</value>
 	</data>
@@ -239,6 +251,10 @@
 		<value>Approve Date</value>
 	</data>
 
+	<data name="ApprovedUser" xml:space="preserve">
+		<value>Approved User</value>
+	</data>
+
 	<data name="ApprovedUserId" xml:space="preserve">
 		<value>Approved User ID</value>
 	</data>
@@ -247,12 +263,40 @@
 		<value>Approved User IP</value>
 	</data>
 
-	<data name="CancellationDate" xml:space="preserve">
-		<value>Cancellation Date</value>
+	<data name="AspNetUser" xml:space="preserve">
+		<value>AppUser</value>
 	</data>
 
-	<data name="CancellationNotes" xml:space="preserve">
-		<value>Cancellation Notes</value>
+	<data name="AspNetUsers" xml:space="preserve">
+		<value>AppUsers</value>
+	</data>
+
+	<data name="AspNetUsersList" xml:space="preserve">
+		<value>AppUsers List</value>
+	</data>
+
+	<data name="CancelDate" xml:space="preserve">
+		<value>Cancel Date</value>
+	</data>
+
+	<data name="Cancelled" xml:space="preserve">
+		<value>Cancelled</value>
+	</data>
+
+	<data name="CancelledUser" xml:space="preserve">
+		<value>Cancelled User</value>
+	</data>
+
+	<data name="CancelledUserId" xml:space="preserve">
+		<value>Cancelled User Id</value>
+	</data>
+
+	<data name="CancelledUserIp" xml:space="preserve">
+		<value>Cancelled User Ip</value>
+	</data>
+
+	<data name="CancelNotes" xml:space="preserve">
+		<value>Cancel Notes</value>
 	</data>
 
 	<data name="Caption" xml:space="preserve">
@@ -311,6 +355,10 @@
 		<value>Country</value>
 	</data>
 
+	<data name="CreateAspNetUser" xml:space="preserve">
+		<value>Create AppUser</value>
+	</data>
+
 	<data name="CreateCompany" xml:space="preserve">
 		<value>Create Company</value>
 	</data>
@@ -325,6 +373,10 @@
 
 	<data name="CreateDate" xml:space="preserve">
 		<value>Create Date</value>
+	</data>
+
+	<data name="CreatedUser" xml:space="preserve">
+		<value>Created User</value>
 	</data>
 
 	<data name="CreateProcess" xml:space="preserve">
@@ -403,6 +455,10 @@
 		<value>Default Title</value>
 	</data>
 
+	<data name="DeleteAspNetUser" xml:space="preserve">
+		<value>Delete AppUser</value>
+	</data>
+
 	<data name="DeleteCompany" xml:space="preserve">
 		<value>Delete Company</value>
 	</data>
@@ -463,12 +519,40 @@
 		<value>Description</value>
 	</data>
 
+	<data name="Discontinued" xml:space="preserve">
+		<value>Discontinued</value>
+	</data>
+
+	<data name="DiscontinueDate" xml:space="preserve">
+		<value>Discontinue Date</value>
+	</data>
+
+	<data name="DiscontinuedUser" xml:space="preserve">
+		<value>Discontinued User</value>
+	</data>
+
+	<data name="DiscontinuedUserId" xml:space="preserve">
+		<value>Discontinued User Id</value>
+	</data>
+
+	<data name="DiscontinuedUserIp" xml:space="preserve">
+		<value>Discontinued User Ip</value>
+	</data>
+
+	<data name="DiscontinueNotes" xml:space="preserve">
+		<value>Discontinue Notes</value>
+	</data>
+
 	<data name="DisplayOrder" xml:space="preserve">
 		<value>Display Order</value>
 	</data>
 
 	<data name="DueDate" xml:space="preserve">
 		<value>Due Date</value>
+	</data>
+
+	<data name="EditAspNetUser" xml:space="preserve">
+		<value>Edit AppUser</value>
 	</data>
 
 	<data name="EditCompany" xml:space="preserve">
@@ -527,6 +611,10 @@
 		<value>Edit Supplier</value>
 	</data>
 
+	<data name="Email" xml:space="preserve">
+		<value>Email</value>
+	</data>
+
 	<data name="EmailHome" xml:space="preserve">
 		<value>Email Home</value>
 	</data>
@@ -551,18 +639,6 @@
 		<value>Image Url</value>
 	</data>
 
-	<data name="InactivateDate" xml:space="preserve">
-		<value>Inactivate Date</value>
-	</data>
-
-	<data name="InactivateNotes" xml:space="preserve">
-		<value>Inactivate Notes</value>
-	</data>
-
-	<data name="IsActive" xml:space="preserve">
-		<value>Active</value>
-	</data>
-
 	<data name="IsApproved" xml:space="preserve">
 		<value>Approved</value>
 	</data>
@@ -573,6 +649,10 @@
 
 	<data name="LastName" xml:space="preserve">
 		<value>Last Name</value>
+	</data>
+
+	<data name="ModifiedUser" xml:space="preserve">
+		<value>Modified User</value>
 	</data>
 
 	<data name="ModifierId" xml:space="preserve">
@@ -747,6 +827,10 @@
 		<value>Realized Date</value>
 	</data>
 
+	<data name="RemoveAspNetUser" xml:space="preserve">
+		<value>Remove AppUser</value>
+	</data>
+
 	<data name="RemoveCompany" xml:space="preserve">
 		<value>Remove Company</value>
 	</data>
@@ -901,6 +985,10 @@
 
 	<data name="UnitPrice" xml:space="preserve">
 		<value>Unit Price</value>
+	</data>
+
+	<data name="UserName" xml:space="preserve">
+		<value>UserName</value>
 	</data>
 
 	<data name="ZipCode" xml:space="preserve">
