--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -87,6 +87,10 @@
 		<value>Application Settings</value>
 	</data>
 
+	<data name="CancelPurchaseOrder" xml:space="preserve">
+		<value>Cancel Purchase Order</value>
+	</data>
+
 	<data name="ContactUs" xml:space="preserve">
 		<value>Contact Us</value>
 	</data>
