SizeRate renamed as SizeRatio. Product.Title, Product.SizingStandart  removed. Manufacturer added to model

--- a/Source/CP.i8n/ActionStrings.resx
+++ b/Source/CP.i8n/ActionStrings.resx
@@ -123,6 +123,10 @@
 		<value>Display</value>
 	</data>
 
+	<data name="DisplayAll" xml:space="preserve">
+		<value>Display All</value>
+	</data>
+
 	<data name="Duplicate" xml:space="preserve">
 		<value>Duplicate</value>
 	</data>
