--- a/Source/CP.i8n/MessageStrings.tr.resx
+++ b/Source/CP.i8n/MessageStrings.tr.resx
@@ -79,6 +79,10 @@
 		<value>Arama kelimenizi girin</value>
 	</data>
 
+	<data name="Loading" xml:space="preserve">
+		<value>Yükleniyor...</value>
+	</data>
+
 	<data name="NoResults" xml:space="preserve">
 		<value>Hiç sonuç bulunamadı</value>
 	</data>
